# Vessel_Fuel_Model

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  PRIORITY_1_STATUS.md  README.md  TESTING_PRIORITY_1.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PRIORITY_1_CURRENT_IMPLEMENTATION.md  data_acquisition.md  research_goals.md
docs/paper/: experiment_protocol.md  figure_captions.md  limitations_future_work.md  methods.md
examples/: real_data_benchmark.py
scripts/: run_research_benchmark.py
tests/: test_current.py  test_data_acquisition.py  test_engine.py  test_environment.py  test_fouling.py  test_model.py  test_research_benchmark_cli.py  test_research_framework.py  test_research_ingest.py  test_resistance.py
vessel_fuel/: __init__.py  current.py  engine.py  environment.py  fouling.py  model.py  resistance.py
vessel_fuel/research/: __init__.py  benchmark.py  data_pipeline.py  hybrid.py  ingest.py  metrics.py  tracking.py  uncertainty.py
